force-app/main/default/objects/Check_In__c/Check_In__c.object-meta.xml
<CustomObject>
    <label>Check In</label>
    <nameField>
        <displayFormat>{MM}/{DD}/{YYYY}-{0000}</displayFormat>
        <label>Check In</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Ins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>