force-app/main/default/objects/Check_In__c/fields/Check_In_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: VC
Business Unit: BLDG 
Purpose: Check in location Space object lookup 
Populated: Auto</description>
    <label>Check In Location</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Check Ins</relationshipLabel>
    <relationshipName>Check_In_Location</relationshipName>
    <type>Lookup</type>
</CustomField>