force-app/main/default/objects/Check_In__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BLDG CC Marked when the check in is for a delivery Automatic</description>
    <inlineHelpText>Marked when the checkin is from a package delivery.</inlineHelpText>
    <label>Delivery?</label>
    <type>Checkbox</type>
</CustomField>