force-app/main/default/objects/Check_In__c/fields/Delivery_Received__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BLDG CC Mark that a delivery has been received by reception. Manual</description>
    <inlineHelpText>Acknowledges that a delivery has been received by reception. If not marked after 5 minutes an email is sent to BLDG, so they can respond.</inlineHelpText>
    <label>Delivery Received?</label>
    <type>Checkbox</type>
</CustomField>