force-app/main/default/objects/Check_In__c/fields/Meeting_With__c.field-meta.xml
<CustomField>
    <fullName>Meeting_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: VC
Business Unit: BLDG 
Purpose: Internal contact lookup field for BLDG 
Populated: Auto</description>
    <label>Meeting With</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting With</relationshipLabel>
    <relationshipName>Meeting_With</relationshipName>
    <type>Lookup</type>
</CustomField>