force-app/main/default/objects/Check_In__c/fields/Visitor__c.field-meta.xml
<CustomField>
    <fullName>Visitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: VC
Business Unit: BLDG 
Purpose: Visitor contact lookup field for BLDG 
Populated: Auto</description>
    <label>Visitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visitor</relationshipLabel>
    <relationshipName>Visitor</relationshipName>
    <type>Lookup</type>
</CustomField>