force-app/main/default/objects/Check_In__c/fields/Visitor_Company__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visitor Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>