force-app/main/default/objects/Check_In__c/fields/Visitor_Email__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visitor Email</label>
    <type>Email</type>
</CustomField>