force-app/main/default/objects/Check_In__c/fields/Visitor_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Pronouns__c</fullName>
    <label>Visitor Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BW_Pronouns</valueSetName>
    </valueSet>
</CustomField>