force-app/main/default/objects/Check_In__c/listViews/Check_Ins_All.listView-meta.xml
<ListView>
    <fullName>Check_Ins_All</fullName>
    <columns>NAME</columns>
    <columns>Visitor__c</columns>
    <columns>Meeting_With__c</columns>
    <columns>Check_In_Location__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Check Ins–All</label>
</ListView>