force-app/main/default/objects/Check_In__c/listViews/Check_Ins_BWSS_Daily.listView-meta.xml
<ListView>
    <fullName>Check_Ins_BWSS_Daily</fullName>
    <columns>NAME</columns>
    <columns>Visitor__c</columns>
    <columns>Meeting_With__c</columns>
    <columns>Check_In_Location__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Check_In_Location__c</field>
        <operation>contains</operation>
        <value>South Stadium</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Check Ins–BWSS Daily</label>
</ListView>