force-app/main/default/objects/Check_In__c/listViews/Check_Ins_Daily_All.listView-meta.xml
<ListView>
    <fullName>Check_Ins_Daily_All</fullName>
    <columns>NAME</columns>
    <columns>Visitor__c</columns>
    <columns>Meeting_With__c</columns>
    <columns>Check_In_Location__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Check Ins–Daily All</label>
</ListView>